syntax = "proto3";

package ocf.cloud.resourceaggregate.pb;

import "github.com/plgd-dev/resource-aggregate/pb/events.proto";
import "github.com/plgd-dev/resource-aggregate/pb/resources.proto";

option go_package = "github.com/plgd-dev/resource-aggregate/pb;pb";

message AuthorizationContext {
    string user_id = 1;
    string device_id = 2;
    string access_token = 3;
}

message CommandMetadata {
    string connection_id = 1;
    uint64 sequence = 2;
}

//******************************************************************************************************************************************************
// Publish / Unpublish Resources                          
// ┌──────────┐          ┌───────┐             ┌──────────────────┐          ┌─────────┐
// │OCF Server│          │Gateway│             │Resource Aggregate│          │Event Bus│
// └──────────┘          └───┬───┘             └────────┬─────────┘          └─────────┘
//     ┌┴┐[UPDATE] '/oic/rd'┌┴┐                         │                         │     
//     │ │ ───────────────> │ │                         │                         │     
//     │ │                  │ │                         │                         │     
//     │ │                  │ │ PublishResourceRequest  ┌┴┐                       │     
//     │ │                  │ │ ───────────────────────>│ │                       │     
//     │ │                  │ │                         │ │                       │     
//     │ │                  │ │ PublishResourceResponse │ │                       │     
//     │ │                  │ │ <───────────────────────│ │                       │     
//     │ │                  └┬┘                         │ │                       │     
//     │ │                   │                          │ │   ResourcePublished   │     
//     │ │                   │                          │ │ ──────────────────────>     
//     │ │                   │                          └┬┘                       │     
//     │ │                  ┌┴┐                 ResourcePublished                 │     
//     │ │                  │ │ <──────────────────────────────────────────────────     
//     │ │                  │ │                         │                         │     
//     │ │       OK         │ │                         │                         │     
//     │ │ <─────────────── │ │                         │                         │     
// ┌───└┬┘────┐          ┌──└┬┘──┐             ┌────────┴─────────┐          ┌─────────┐
// │OCF Server│          │Gateway│             │Resource Aggregate│          │Event Bus│
// └──────────┘          └───────┘             └──────────────────┘          └─────────┘
//******************************************************************************************************************************************************

// https://github.com/openconnectivityfoundation/core/blob/master/oic.wk.rd.raml#L65
message PublishResourceRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    Resource resource = 3; // Resource publish is atomic - PublishResource command per link from list. The CoAP-Gateway is responsible for the transaction.
    int32 time_to_live = 4;
    CommandMetadata command_metadata = 5;
}

message PublishResourceResponse {
    AuditContext audit_context = 1;
    int64 instance_id = 2;
}

// https://github.com/openconnectivityfoundation/core/blob/master/oic.wk.rd.raml #Specification CR needed
message UnpublishResourceRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    CommandMetadata command_metadata = 3;
}

message UnpublishResourceResponse {
    AuditContext audit_context = 1;
}

//******************************************************************************************************************************************************
// Resource content changed
// (changed from the cloud or locally)                               
// ┌──────────┐                           ┌───────┐                           ┌──────────────────┐          ┌─────────┐
// │OCF Server│                           │Gateway│                           │Resource Aggregate│          │Event Bus│
// └──────────┘                           └───┬───┘                           └────────┬─────────┘          └─────────┘
//      │[NOTIFY] 'oic.r.temperature' changed┌┴┐                                       │                         │     
//      │ ──────────────────────────────────>│ │                                       │                         │     
//      │                                    │ │                                       │                         │     
//      │                                    │ │ NotifyResourceContentChangedRequest  ┌┴┐                        │     
//      │                                    │ │ ────────────────────────────────────>│ │                        │     
//      │                                    │ │                                      │ │                        │     
//      │                                    │ │ NotifyResourceContentChangedResponse │ │                        │     
//      │                                    │ │ <────────────────────────────────────│ │                        │     
//      │                                    └┬┘                                      │ │                        │     
//      │                                     │                                       │ │ ResourceContentChanged │     
//      │                                     │                                       │ │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─>│     
// ┌──────────┐                           ┌───┴───┐                           ┌───────└┬┘────────┐          ┌─────────┐
// │OCF Server│                           │Gateway│                           │Resource Aggregate│          │Event Bus│
// └──────────┘                           └───────┘                           └──────────────────┘          └─────────┘
//******************************************************************************************************************************************************

message NotifyResourceContentChangedRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    Content content = 3;
    CommandMetadata command_metadata = 4;
}

message NotifyResourceContentChangedResponse {
    AuditContext audit_context = 1;
}

//*******************************************************************************************************************************************************
// Update Resource                                                                                                                                                   
// ┌──────────┐                           ┌───────┐                                   ┌──────────────────┐                  ┌─────────┐                ┌──────┐     
// │OCF Server│                           │Gateway│                                   │Resource Aggregate│                  │Event Bus│                │Client│     
// └──────────┘                           └───┬───┘                                   └────────┬─────────┘                  └─────────┘                └──────┘     
//      │                                     │                                               ┌┴┐              UpdateResourceContentRequest              ┌┴┐        
//      │                                     │                                               │ │ <──────────────────────────────────────────────────────│ │        
//      │                                     │                                               │ │                                │                       │ │        
//      │                                     │                                               │ │             UpdateResourceContentResponse              │ │        
//      │                                     │                                               │ │ ──────────────────────────────────────────────────────>│ │        
//      │                                     │                                               │ │                                │                       │ │        
//      │                                     │                                               │ │  ResourceContentUpdatePending  │                       │ │        
//      │                                     │                                               │ │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─>│                       │ │        
//      │                                     │                                               └┬┘                                │                       │ │        
//      │                                    ┌┴┐                          ResourceContentUpdatePending                           │                       │ │        
//      │                                    │ │ <─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─│                       │ │        
//      │                                    │ │                                               │                                 │                       │ │        
//     ┌┴┐   [UPDATE] 'oic.r.temperature'    │ │                                               │                                 │                       │ │        
//     │ │ <─────────────────────────────────│ │                                               │                                 │                       │ │        
//     │ │                                   │ │                                               │                                 │                       │ │        
//     │ │                OK                 │ │                                               │                                 │                       │ │        
//     │ │ ─────────────────────────────────>│ │                                               │                                 │                       │ │        
//     └┬┘                                   │ │                                               │                                 │                       │ │        
//      │                                    │ │ NotifyResourceContentUpdateProcessedRequest  ┌┴┐                                │                       │ │        
//      │                                    │ │ ────────────────────────────────────────────>│ │                                │                       │ │        
//      │                                    │ │                                              │ │                                │                       │ │        
//      │                                    │ │ NotifyResourceContentUpdateProcessedResponse │ │                                │                       │ │        
//      │                                    │ │ <────────────────────────────────────────────│ │                                │                       │ │        
//      │                                    └┬┘                                              │ │                                │                       │ │        
//      │                                     │                                               │ │ ResourceContentUpdateProcessed │                       │ │        
//      │                                     │                                               │ │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─>│                       │ │        
//      │                                     │                                               └┬┘                                │                       │ │        
//      │                                     │                                                │                                 │ResourceContentUpdated │ │        
//      │                                     │                                                │                                 │ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─>│ │        
//      │                                     │                                                │                                 │                       └┬┘        
//      │                                     │                                                │                                 │                        │         
//      │                                     │                    ╔══════════════════════════╗│                                 │                        │         
// ═════╪═════════════════════════════════════╪════════════════════╣ Resource content changed ╠╪═════════════════════════════════╪════════════════════════╪═════
//      │                                     │                    ╚══════════════════════════╝│                                 │                        │         
//      │                                     │                                                │                                 │                        │         
//      │ [NOTIFY] 'oic.r.temperature' changed│                                                │                                 │                        │         
//      │ ────────────────────────────────────>                                                │                                 │                        │         
// ┌──────────┐                           ┌───┴───┐                                   ┌────────┴─────────┐                  ┌─────────┐                ┌──────┐     
// │OCF Server│                           │Gateway│                                   │Resource Aggregate│                  │Event Bus│                │Client│     
// └──────────┘                           └───────┘                                   └──────────────────┘                  └─────────┘                └──────┘     
//*******************************************************************************************************************************************************

message UpdateResourceContentRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    string correlation_id = 3;
    Content content = 4;
    CommandMetadata command_metadata = 5;
}

message UpdateResourceContentResponse {
    AuditContext audit_context = 1;
}

message NotifyResourceContentUpdateProcessedRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    string correlation_id = 3;
    Status status = 4;
    Content content = 5;
    CommandMetadata command_metadata = 6;
}

message NotifyResourceContentUpdateProcessedResponse {
    AuditContext audit_context = 1;
}

//*******************************************************************************************************************************************************
// Retrieve Resource                                                                   
//                                                                                                                                                                 
// ┌──────────┐            ┌───────┐                                    ┌──────────────────┐                    ┌─────────┐                           ┌──────┐
// │OCF Server│            │Gateway│                                    │Resource Aggregate│                    │Event Bus│                           │Client│
// └──────────┘            └───┬───┘                                    └────────┬─────────┘                    └─────────┘                           └──────┘
//      │                      │                                                ┌┴┐                   RetrieveResourceContentRequest                     ┌┴┐  
//      │                      │                                                │ │ <─────────────────────────────────────────────────────────────────── │ │  
//      │                      │                                                │ │                                 │                                    │ │  
//      │                      │                                                │ │                   RetrieveResourceContentResponse                    │ │  
//      │                      │                                                │ │ ───────────────────────────────────────────────────────────────────> │ │  
//      │                      │                                                └┬┘                                 │                                    │ │  
//      │                      │                                                 │  ResourceContentRetrievePending   │                                   │ │  
//      │                      │                                                 │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ >│                                   │ │  
//      │                      │                                                 │                                   │                                   │ │  
//      │                     ┌┴┐                           ResourceContentRetrievePending                           │                                   │ │  
//      │                     │ │ <─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─                                   │ │  
//      │                     │ │                                                │                                   │                                   │ │  
//     ┌┴┐[RETRIEVE] '/oic/d' │ │                                                │                                   │                                   │ │  
//     │ │ <───────────────── │ │                                                │                                   │                                   │ │  
//     └┬┘                    │ │                                                │                                   │                                   │ │  
//      │         OK          │ │                                                │                                   │                                   │ │  
//      │ ───────────────────>│ │                                                │                                   │                                   │ │  
//      │                     │ │                                                │                                   │                                   │ │  
//      │                     │ │ NotifyResourceContentRetrieveProcessedRequest ┌┴┐                                  │                                   │ │  
//      │                     │ │ ─────────────────────────────────────────────>│ │                                  │                                   │ │  
//      │                     └┬┘                                               │ │                                  │                                   │ │  
//      │                      │NotifyResourceContentRetrieveProcessedResponse  │ │                                  │                                   │ │  
//      │                      │<────────────────────────────────────────────── │ │                                  │                                   │ │  
//      │                      │                                                └┬┘                                  │                                   │ │  
//      │                      │                                                 │ ResourceContentRetrieveProcessed  │                                   │ │  
//      │                      │                                                 │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ >│                                   │ │  
//      │                      │                                                 │                                   │                                   └┬┘  
//      │                      │                                                 │                                   │ ResourceContentRetrievedProcessed  │    
//      │                      │                                                 │                                   │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─>    
// ┌──────────┐            ┌───┴───┐                                    ┌────────┴─────────┐                    ┌─────────┐                           ┌──────┐
// │OCF Server│            │Gateway│                                    │Resource Aggregate│                    │Event Bus│                           │Client│
// └──────────┘            └───────┘                                    └──────────────────┘                    └─────────┘                           └──────┘
//*******************************************************************************************************************************************************

message RetrieveResourceContentRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    string correlation_id = 3;
    string resource_interface = 4;
    CommandMetadata command_metadata = 5;
}

message RetrieveResourceContentResponse {
    AuditContext audit_context = 1;
}

message NotifyResourceContentRetrieveProcessedRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    string correlation_id = 3;
    Status status = 4;
    Content content = 5;
    CommandMetadata command_metadata = 6;
}

message NotifyResourceContentRetrieveProcessedResponse {
    AuditContext audit_context = 1;
}
